--- a/phpspec.yml.dist
+++ b/phpspec.yml.dist
@@ -1,4 +1,4 @@
 suites:
   default:
-    namespace: Aggrego\Neo4jEventConsumer
-    psr4_prefix: Aggrego\Neo4jEventConsumer
+    namespace: Aggrego\Neo4jIntegration
+    psr4_prefix: Aggrego\Neo4jIntegration
