Update tests & copyrights & license

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
   "name": "aggrego/neo4j-integration",
   "type": "library",
   "description": "",
-  "minimum-stability": "dev",
   "license": "BSD-3-Clause",
   "keywords": [],
   "authors": [
@@ -12,12 +11,14 @@
   ],
   "require": {
     "php": ">=7.1",
-    "aggrego/command-consumer": "dev-master",
+    "aggrego/command-consumer": "^0",
     "graphaware/neo4j-php-client": "^4.0"
   },
   "require-dev": {
     "wikimedia/composer-merge-plugin": "1.4.*",
-    "phpspec/phpspec": "^5.0"
+    "phpspec/phpspec": "^5.0",
+    "squizlabs/php_codesniffer": "3.*",
+    "phpstan/phpstan": "^0.10"
   },
   "autoload": {
     "psr-4": {
